agent libs update

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ benchmarks/bms/batik/deps
 benchmarks/bms/eclipse/plugin/@dot
 benchmarks/dacapo-*.jar
 benchmarks/scratch/
+benchmarks/agent/download
